--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Django REST with React</title>
+  <title>Finder</title>
 </head>
 <body>
 <div id="app">
     <!-- React will load here -->
 </div>
 </body>
-{% load static %}
-<script src="{% static "/main.js" %}"></script>
+
+<script src="static/main.js"></script>
 </html>
